@@ -1,5 +1,9 @@
 2010-05-24  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>
 
+	* historydb.c, historydb.h:
+	    Keep knowledge of last coordinate on historydb.
+	    Mark also last coordinate update time.
+
 	* aprx.h, pbuf.h, parse_aprs.c, interface.c, digipeater.c:
 	    Tx-IGate processing details..
 
